# pete

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic.rs  hw_break.rs  set_env.rs  syscalls.rs
script/: hw-breakpoint-test  parse_perf_trace.py  syscall-tracepoint-test
src/: aarch64.rs  cmd.rs  error.rs  lib.rs  ptracer.rs  x86.rs
test-programs/: build-all.sh
test-programs/exec-off-leader/: Cargo.toml
test-programs/exec-off-leader/src/: main.rs
test-programs/nop/: Makefile
tests/: child_exit_status.rs  integration.rs  kill_sigtrap.rs  ptracer_options.rs  tracee_died.rs  tracee_options.rs  tracee_wait_child.rs  wait_untraced_child.rs
tests/support/: mod.rs
