[package]
name = "pete"
version = "0.8.0"
authors = ["Joe Ranweiler <joe@lemma.co>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/ranweiler/pete"
description = "A friendly wrapper around ptrace(2)"
include = [
    "src/",
]

[dependencies]
libc = "0.2.99"
nix = "0.23.0"
thiserror = "1.0.11"

[target.'cfg(target_arch = "x86_64")'.dependencies]
memoffset = "0.6.4"

[dev-dependencies]
anyhow = "1.0.31"
lazy_static = "1.4.0"
ntest = "0.8.0"
structopt = "0.3.21"
