[package]
name = "pete"
version = "0.9.0"
rust-version = "1.63"
edition = "2018"
license = "ISC"
readme = "README.md"
authors = ["Joe Ranweiler <joe@lemma.co>"]
repository = "https://github.com/ranweiler/pete"
description = "A friendly wrapper around ptrace(2)"
include = [
    "src/",
]

[dependencies]
libc = "0.2.99"
nix = "0.26.2"
thiserror = "1.0.11"

[target.'cfg(target_arch = "x86_64")'.dependencies]
memoffset = "0.8.0"

[dev-dependencies]
anyhow = "1.0.31"
lazy_static = "1.4.0"
ntest = "0.7.3"
structopt = "0.3.21"
