[package]
name = "pete"
version = "0.12.0"
rust-version = "1.64"
edition = "2018"
license = "ISC"
readme = "README.md"
authors = ["Joe Ranweiler <joe@lemma.co>"]
repository = "https://github.com/ranweiler/pete"
description = "A friendly wrapper around ptrace(2)"
include = [
    "src/",
]

[dependencies]
libc = "0.2.99"
nix = { version = "0.30.1", features = ["process", "ptrace"] }
thiserror = "2.0.16"
tracing = "0.1.41"

[target.'cfg(target_arch = "x86_64")'.dependencies]
memoffset = "0.9.1"

[dev-dependencies]
anyhow = "1.0.31"
lazy_static = "1.4.0"
ntest = "0.9.0"
structopt = "0.3.21"
tracing-subscriber = "0.3.19"
